@@ -22,6 +22,13 @@
 
 /* 7.16. Boolean type and values */
 
+/* BeOS <sys/socket.h> already #defines false 0, true 1.  We use the same
+   definitions below, but temporarily we have to #undef them.  */
+#ifdef __BEOS__
+# undef false
+# undef true
+#endif
+
 /* For the sake of symbolic names in gdb, define _Bool as an enum type.  */
 #ifndef __cplusplus
 typedef enum { false = 0, true = 1 } _Bool;
